--- a/MyShop.Core/MyShop.WebUI.Tests/packages.config
+++ b/MyShop.Core/MyShop.WebUI.Tests/packages.config
@@ -7,4 +7,6 @@
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
+  <package id="Unity.Container" version="5.8.13" targetFramework="net461" />
 </packages>
