--- a/MyShop.Core/MyShop.Core/MyShop.Core.csproj
+++ b/MyShop.Core/MyShop.Core/MyShop.Core.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\ProductListViewModel.cs" />
     <Compile Include="ViewModel\ProductManagerViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
